# rmsim

./: Instrucciones  README.md  cuerpo.gazebo  cuerpo.trans  cuerpo.xacro  macros.xacro  pata.trans  pata.xacro
images/: README.md
rm_custom_control/: CMakeLists.txt  controller_plugins.xml  package.xml
rm_custom_control/config/: controller.yaml  controller_old.yaml
rm_custom_control/launch/: controller.launch
rm_custom_control/src/: joint_position_controller.cpp  rm_biased_controller.cpp  rm_controller.cpp
robominer_control/: CMakeLists.txt  package.xml
robominer_control/config/: controller.yaml
robominer_control/launch/: controller.launch  controller.launch~9d281d2db7cd0125606e4a5d42e7e03b34d0c9af
robominer_control/scripts/: Orden joint_states  depie.py  eff_listener.py  ft_listener.py  listener.py  patas_listener.py  pos_listener.py  pos_printer.py  talker.py  vel_listener.py
robominer_description/: CMakeLists.txt  package.xml
robominer_description/launch/: controller.launch  controller.yaml  display.launch  empty_world.launch.py  gazebo.launch  gazebo.launch.py  gazebo2.launch.py  gazebo3.launch.py  joints.launch  prueba.launch  replace_string.py  robot_state_publisher.launch.py  rviz_launch.py  urdf.rviz
robominer_description/meshes/: Component10_1.stl  Component11_1.stl  Component12_1.stl  Component1_1.stl  Component2_1.stl  Component3_1.stl  Component4_1.stl  Component5_1.stl  Component6_1.stl  Component7_1.stl  Component8_1.stl  Component9_1.stl  cuerpo.stl  ladrilloslogo.stl  logo1.stl  logo2.stl
robominer_description/urdf/: README  cuerpo.xacro  macros.xacro  materials.xacro  pata.xacro  robominer.gazebo  robominer.sdf  robominer.trans  robominer.urdf  robominer.xacro  robominer_alt.gazebo
robominer_plugins/: CMakeLists.txt  package.xml
robominer_plugins/launch/: test.launch
robominer_plugins/src/: camera_publisher.cpp  robominer_fault_injection.cpp
robominer_plugins/srv/: robominer_srv.srv
robominer_plugins/worlds/: test.world
romerin_description/: CMakeLists.txt  package.xml
rqt_mypkg/: CMakeLists.txt  package.xml  setup.py
test/: README.md
urdf/: pata.gazebo  romerin.xacro
(+121 files in other folders)
